# STM32_TFLM_With_FreeRTOS

./: CMakeLists.txt  README.md  gcc-arm-none-eabi.cmake  test.txt  tflm-guide.md
Includes/: clock.hh  dht.h  gpio.h  model.hh  timer.h  uart.h
Sources/: main.cpp  uart.cc
